--- a/MTL_RDM.ipynb
+++ b/MTL_RDM.ipynb
@@ -1180,12 +1180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tt = BertTokenizer.from_pretrained(\"bert-base-uncased\", cached_dir = \"/home/hadoop/transformer_pretrained_models/bert-base-uncased-pytorch_model.bin\")"
+    "tt = BertTokenizer.from_pretrained(\"bert-base-uncased\", cached_dir = \"/home/hadoop/transformer_pretrained_models/bert-base-uncased-pytorch_model.bin\")\n",
+    "bb = BertModel.from_pretrained(\"bert-base-uncased\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "bb.save_pretrained('./bertModel/')  # save\n",
+    "tt.save_pretrained('./bertModel/')  # save\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1193,8 +1211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb = BertModel.from_pretrained(\"bert-base-uncased\")\n",
-    "\n",
     "task_embedding = nn.Embedding(3, 768)\n",
     "\n",
     "encoder_layer = nn.TransformerEncoderLayer(768, 8)\n",
@@ -14905,44 +14921,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     0  20000|MTL_Loss:0.77111143, rdm_loss/rdm_acc = 0.91057253/0.0000000 | senti_loss/senti_acc = 0.34046395/0.9000000 | subj_loss/subj_acc = 0.08606991/1.0000000 \n",
-      "     1  20000|MTL_Loss:0.56057475, rdm_loss/rdm_acc = 0.66581202/0.5000000 | senti_loss/senti_acc = 0.24472563/0.9000000 | subj_loss/subj_acc = 0.03452548/1.0000000 \n",
-      "     2  20000|MTL_Loss:0.63300538, rdm_loss/rdm_acc = 0.76154262/0.0000000 | senti_loss/senti_acc = 0.12273002/1.0000000 | subj_loss/subj_acc = 0.11498297/0.9000000 \n",
-      "     3  20000|MTL_Loss:0.59961599, rdm_loss/rdm_acc = 0.68581110/0.5000000 | senti_loss/senti_acc = 0.44404823/0.9000000 | subj_loss/subj_acc = 0.06562263/1.0000000 \n",
-      "     4  20000|MTL_Loss:0.67842360, rdm_loss/rdm_acc = 0.71854609/0.5000000 | senti_loss/senti_acc = 0.99734148/0.4000000 | subj_loss/subj_acc = 0.03852527/1.0000000 \n",
-      "     5  20000|MTL_Loss:0.65953096, rdm_loss/rdm_acc = 0.76218450/0.0000000 | senti_loss/senti_acc = 0.46502822/0.8000000 | subj_loss/subj_acc = 0.03280537/1.0000000 \n",
-      "     6  20000|MTL_Loss:0.65213637, rdm_loss/rdm_acc = 0.74625385/0.0000000 | senti_loss/senti_acc = 0.50794700/0.7000000 | subj_loss/subj_acc = 0.04338570/1.0000000 \n",
-      "     7  20000|MTL_Loss:0.63985416, rdm_loss/rdm_acc = 0.72360194/0.0000000 | senti_loss/senti_acc = 0.57545078/0.8000000 | subj_loss/subj_acc = 0.03427514/1.0000000 \n",
-      "     8  20000|MTL_Loss:0.55762075, rdm_loss/rdm_acc = 0.65361518/1.0000000 | senti_loss/senti_acc = 0.32395320/0.8000000 | subj_loss/subj_acc = 0.02333258/1.0000000 \n",
-      "     9  20000|MTL_Loss:0.58395103, rdm_loss/rdm_acc = 0.68498677/0.5000000 | senti_loss/senti_acc = 0.35113640/0.9000000 | subj_loss/subj_acc = 0.00847959/1.0000000 \n",
-      "MTL_Loss:0.63358244, rdm_loss/rdm_acc = 0.73129266/0.3000000 | senti_loss/senti_acc = 0.43728249/0.8100000 | subj_loss/subj_acc = 0.04820046/0.9900000 \n",
-      "    10  20000|MTL_Loss:0.58003733, rdm_loss/rdm_acc = 0.67194486/0.5000000 | senti_loss/senti_acc = 0.28626231/0.8000000 | subj_loss/subj_acc = 0.13855222/1.0000000 \n",
-      "    11  20000|MTL_Loss:0.54097617, rdm_loss/rdm_acc = 0.64116216/0.5000000 | senti_loss/senti_acc = 0.26863661/0.9000000 | subj_loss/subj_acc = 0.01182786/1.0000000 \n",
-      "    12  20000|MTL_Loss:0.62977200, rdm_loss/rdm_acc = 0.75211996/0.0000000 | senti_loss/senti_acc = 0.25084936/0.9000000 | subj_loss/subj_acc = 0.02991099/1.0000000 \n",
-      "    13  20000|MTL_Loss:0.62905694, rdm_loss/rdm_acc = 0.72400200/0.0000000 | senti_loss/senti_acc = 0.32133896/0.9000000 | subj_loss/subj_acc = 0.17721401/0.9000000 \n",
-      "    14  20000|MTL_Loss:0.56159637, rdm_loss/rdm_acc = 0.64013922/1.0000000 | senti_loss/senti_acc = 0.48377404/0.7000000 | subj_loss/subj_acc = 0.01107626/1.0000000 \n",
-      "    15  20000|MTL_Loss:0.62934521, rdm_loss/rdm_acc = 0.74867737/0.0000000 | senti_loss/senti_acc = 0.25037708/0.9000000 | subj_loss/subj_acc = 0.05365578/1.0000000 \n",
-      "    16  20000|MTL_Loss:0.62568437, rdm_loss/rdm_acc = 0.75420785/0.0000000 | senti_loss/senti_acc = 0.15016907/1.0000000 | subj_loss/subj_acc = 0.07301149/1.0000000 \n",
-      "    17  20000|MTL_Loss:0.59340460, rdm_loss/rdm_acc = 0.67711240/0.5000000 | senti_loss/senti_acc = 0.29746917/0.9000000 | subj_loss/subj_acc = 0.21967754/0.9000000 \n",
-      "    18  20000|MTL_Loss:0.65635045, rdm_loss/rdm_acc = 0.68973011/0.5000000 | senti_loss/senti_acc = 0.47630277/0.7000000 | subj_loss/subj_acc = 0.56936069/0.9000000 \n",
-      "    19  20000|MTL_Loss:0.58845028, rdm_loss/rdm_acc = 0.69665784/0.5000000 | senti_loss/senti_acc = 0.27854240/0.8000000 | subj_loss/subj_acc = 0.03269780/1.0000000 \n",
-      "MTL_Loss:0.60346737, rdm_loss/rdm_acc = 0.69957538/0.3500000 | senti_loss/senti_acc = 0.30637218/0.8500000 | subj_loss/subj_acc = 0.13169846/0.9700000 \n",
-      "    20  20000|MTL_Loss:0.55888335, rdm_loss/rdm_acc = 0.65098608/1.0000000 | senti_loss/senti_acc = 0.36395814/0.9000000 | subj_loss/subj_acc = 0.01698665/1.0000000 \n",
-      "    21  20000|MTL_Loss:0.51390333, rdm_loss/rdm_acc = 0.61191338/1.0000000 | senti_loss/senti_acc = 0.20438470/0.9000000 | subj_loss/subj_acc = 0.03934155/1.0000000 \n",
-      "    22  20000|MTL_Loss:0.70199547, rdm_loss/rdm_acc = 0.77352166/0.0000000 | senti_loss/senti_acc = 0.68859297/0.7000000 | subj_loss/subj_acc = 0.14318841/0.9000000 \n",
-      "    23  20000|MTL_Loss:0.69900407, rdm_loss/rdm_acc = 0.84623593/0.0000000 | senti_loss/senti_acc = 0.21211140/0.9000000 | subj_loss/subj_acc = 0.00804142/1.0000000 \n",
-      "    24  20000|MTL_Loss:0.64941844, rdm_loss/rdm_acc = 0.72292447/0.5000000 | senti_loss/senti_acc = 0.65079839/0.5000000 | subj_loss/subj_acc = 0.05999020/1.0000000 \n",
-      "    25  20000|MTL_Loss:0.61084980, rdm_loss/rdm_acc = 0.71709484/0.0000000 | senti_loss/senti_acc = 0.36465122/0.8000000 | subj_loss/subj_acc = 0.00708812/1.0000000 \n",
-      "    26  20000|MTL_Loss:0.59269373, rdm_loss/rdm_acc = 0.68020463/0.5000000 | senti_loss/senti_acc = 0.43218451/0.9000000 | subj_loss/subj_acc = 0.05311581/1.0000000 \n",
-      "    27  20000|MTL_Loss:0.57310035, rdm_loss/rdm_acc = 0.68672466/0.5000000 | senti_loss/senti_acc = 0.22389416/0.9000000 | subj_loss/subj_acc = 0.01331197/1.0000000 \n",
-      "    28  20000|MTL_Loss:0.61369457, rdm_loss/rdm_acc = 0.71240586/0.5000000 | senti_loss/senti_acc = 0.43564125/0.8000000 | subj_loss/subj_acc = 0.00205725/1.0000000 \n",
-      "    29  20000|MTL_Loss:0.64500674, rdm_loss/rdm_acc = 0.73802942/0.0000000 | senti_loss/senti_acc = 0.52222851/0.8000000 | subj_loss/subj_acc = 0.02360357/1.0000000 \n",
-      "MTL_Loss:0.61585498, rdm_loss/rdm_acc = 0.71400409/0.4000000 | senti_loss/senti_acc = 0.40984453/0.8100000 | subj_loss/subj_acc = 0.03667250/0.9900000 \n",
-      "    30  20000|MTL_Loss:0.58432994, rdm_loss/rdm_acc = 0.67158413/1.0000000 | senti_loss/senti_acc = 0.44402940/0.8000000 | subj_loss/subj_acc = 0.02659667/1.0000000 \n",
-      "    31  20000|MTL_Loss:0.62185754, rdm_loss/rdm_acc = 0.73150343/0.5000000 | senti_loss/senti_acc = 0.36128989/0.9000000 | subj_loss/subj_acc = 0.00525793/1.0000000 \n",
-      "    32  20000|MTL_Loss:0.58952880, rdm_loss/rdm_acc = 0.69084567/0.5000000 | senti_loss/senti_acc = 0.36228910/0.8000000 | subj_loss/subj_acc = 0.00623344/1.0000000 \n",
-      "    33  20000|MTL_Loss:0.68569394, rdm_loss/rdm_acc = 0.70813018/0.5000000 | senti_loss/senti_acc = 1.18651571/0.4000000 | subj_loss/subj_acc = 0.00538201/1.0000000 \n",
-      "    34  20000|MTL_Loss:0.60190752, rdm_loss/rdm_acc = 0.70056313/0.0000000 | senti_loss/senti_acc = 0.38378144/0.8000000 | subj_loss/subj_acc = 0.03078859/1.0000000 \n"
+      "     0  20000|MTL_Loss:0.69997206, rdm_loss/rdm_acc = 0.72082072/0.0000000 | senti_loss/senti_acc = 0.56915508/0.7000000 | subj_loss/subj_acc = 0.66399979/0.7000000 \n",
+      "     1  20000|MTL_Loss:0.76249111, rdm_loss/rdm_acc = 0.77836663/0.5000000 | senti_loss/senti_acc = 0.64321386/0.7000000 | subj_loss/subj_acc = 0.75476415/0.6000000 \n",
+      "     2  20000|MTL_Loss:0.68839521, rdm_loss/rdm_acc = 0.65440810/1.0000000 | senti_loss/senti_acc = 0.78327168/0.4000000 | subj_loss/subj_acc = 0.86541580/0.4000000 \n",
+      "     3  20000|MTL_Loss:0.63432469, rdm_loss/rdm_acc = 0.60354131/1.0000000 | senti_loss/senti_acc = 0.78165638/0.5000000 | subj_loss/subj_acc = 0.73325985/0.6000000 \n",
+      "     4  20000|MTL_Loss:0.77588555, rdm_loss/rdm_acc = 0.80867416/0.5000000 | senti_loss/senti_acc = 0.58763288/0.7000000 | subj_loss/subj_acc = 0.70182917/0.6000000 \n",
+      "     5  20000|MTL_Loss:0.77552871, rdm_loss/rdm_acc = 0.74261606/0.0000000 | senti_loss/senti_acc = 0.76038471/0.5000000 | subj_loss/subj_acc = 1.05397377/0.3000000 \n",
+      "     6  20000|MTL_Loss:0.63857844, rdm_loss/rdm_acc = 0.60057181/1.0000000 | senti_loss/senti_acc = 0.68634045/0.6000000 | subj_loss/subj_acc = 0.89486938/0.4000000 \n",
+      "     7  20000|MTL_Loss:0.80089411, rdm_loss/rdm_acc = 0.81035757/0.0000000 | senti_loss/senti_acc = 0.75310332/0.5000000 | subj_loss/subj_acc = 0.77297728/0.6000000 \n",
+      "     8  20000|MTL_Loss:0.73944832, rdm_loss/rdm_acc = 0.73426324/0.5000000 | senti_loss/senti_acc = 0.78008971/0.5000000 | subj_loss/subj_acc = 0.74028726/0.6000000 \n",
+      "     9  20000|MTL_Loss:0.73400935, rdm_loss/rdm_acc = 0.71050352/0.5000000 | senti_loss/senti_acc = 0.83446850/0.3000000 | subj_loss/subj_acc = 0.82159665/0.5000000 \n",
+      "MTL_Loss:0.72495275, rdm_loss/rdm_acc = 0.71641231/0.5000000 | senti_loss/senti_acc = 0.71793166/0.5400000 | subj_loss/subj_acc = 0.80029731/0.5300000 \n",
+      "    10  20000|MTL_Loss:0.72367420, rdm_loss/rdm_acc = 0.71359485/0.5000000 | senti_loss/senti_acc = 0.73749657/0.5000000 | subj_loss/subj_acc = 0.79048660/0.5000000 \n",
+      "    11  20000|MTL_Loss:0.69845359, rdm_loss/rdm_acc = 0.69050735/0.5000000 | senti_loss/senti_acc = 0.73873118/0.6000000 | subj_loss/subj_acc = 0.72174577/0.7000000 \n",
+      "    12  20000|MTL_Loss:0.66793118, rdm_loss/rdm_acc = 0.68196225/1.0000000 | senti_loss/senti_acc = 0.76090409/0.4000000 | subj_loss/subj_acc = 0.46270939/0.9000000 \n",
+      "    13  20000|MTL_Loss:0.66269525, rdm_loss/rdm_acc = 0.63153446/1.0000000 | senti_loss/senti_acc = 0.71054145/0.5000000 | subj_loss/subj_acc = 0.86413549/0.5000000 \n",
+      "    14  20000|MTL_Loss:0.77255206, rdm_loss/rdm_acc = 0.78044426/0.0000000 | senti_loss/senti_acc = 0.64666699/0.7000000 | subj_loss/subj_acc = 0.83529940/0.5000000 \n",
+      "    15  20000|MTL_Loss:0.73912073, rdm_loss/rdm_acc = 0.74488181/0.0000000 | senti_loss/senti_acc = 0.64040604/0.7000000 | subj_loss/subj_acc = 0.79174654/0.5000000 \n",
+      "    16  20000|MTL_Loss:0.68254323, rdm_loss/rdm_acc = 0.64451873/1.0000000 | senti_loss/senti_acc = 0.81738054/0.2000000 | subj_loss/subj_acc = 0.85190185/0.5000000 \n",
+      "    17  20000|MTL_Loss:0.73283180, rdm_loss/rdm_acc = 0.71371180/0.5000000 | senti_loss/senti_acc = 0.71063194/0.5000000 | subj_loss/subj_acc = 0.90799171/0.4000000 \n",
+      "    18  20000|MTL_Loss:0.68888658, rdm_loss/rdm_acc = 0.67697757/1.0000000 | senti_loss/senti_acc = 0.71261656/0.4000000 | subj_loss/subj_acc = 0.76042871/0.6000000 \n",
+      "    19  20000|MTL_Loss:0.73758266, rdm_loss/rdm_acc = 0.72411436/0.0000000 | senti_loss/senti_acc = 0.59353443/0.8000000 | subj_loss/subj_acc = 0.98937690/0.4000000 \n",
+      "MTL_Loss:0.71062713, rdm_loss/rdm_acc = 0.70022475/0.5500000 | senti_loss/senti_acc = 0.70689098/0.5300000 | subj_loss/subj_acc = 0.79758224/0.5500000 \n",
+      "    20  20000|MTL_Loss:0.72729105, rdm_loss/rdm_acc = 0.71264249/0.0000000 | senti_loss/senti_acc = 0.81740638/0.3000000 | subj_loss/subj_acc = 0.75436388/0.6000000 \n",
+      "    21  20000|MTL_Loss:0.72014757, rdm_loss/rdm_acc = 0.66945124/1.0000000 | senti_loss/senti_acc = 0.72332926/0.4000000 | subj_loss/subj_acc = 1.12253623/0.2000000 \n",
+      "    22  20000|MTL_Loss:0.75386617, rdm_loss/rdm_acc = 0.73320884/0.0000000 | senti_loss/senti_acc = 0.73131270/0.5000000 | subj_loss/subj_acc = 0.94167815/0.4000000 \n",
+      "    23  20000|MTL_Loss:0.70307910, rdm_loss/rdm_acc = 0.70999521/0.0000000 | senti_loss/senti_acc = 0.66146100/0.7000000 | subj_loss/subj_acc = 0.68936799/0.6000000 \n",
+      "    24  20000|MTL_Loss:0.72809663, rdm_loss/rdm_acc = 0.72557837/0.0000000 | senti_loss/senti_acc = 0.67266300/0.6000000 | subj_loss/subj_acc = 0.80367630/0.5000000 \n",
+      "    25  20000|MTL_Loss:0.70549861, rdm_loss/rdm_acc = 0.68772435/1.0000000 | senti_loss/senti_acc = 0.73321490/0.6000000 | subj_loss/subj_acc = 0.81997634/0.5000000 \n",
+      "    26  20000|MTL_Loss:0.67867330, rdm_loss/rdm_acc = 0.64455390/1.0000000 | senti_loss/senti_acc = 0.76843286/0.4000000 | subj_loss/subj_acc = 0.86186898/0.4000000 \n",
+      "    27  20000|MTL_Loss:0.63240165, rdm_loss/rdm_acc = 0.61258924/1.0000000 | senti_loss/senti_acc = 0.73620048/0.4000000 | subj_loss/subj_acc = 0.68710211/0.7000000 \n",
+      "    28  20000|MTL_Loss:0.75572720, rdm_loss/rdm_acc = 0.75127774/0.5000000 | senti_loss/senti_acc = 0.67822152/0.4000000 | subj_loss/subj_acc = 0.86882859/0.5000000 \n",
+      "    29  20000|MTL_Loss:0.73850583, rdm_loss/rdm_acc = 0.73633021/0.5000000 | senti_loss/senti_acc = 0.71046113/0.6000000 | subj_loss/subj_acc = 0.78395540/0.6000000 \n",
+      "MTL_Loss:0.71432871, rdm_loss/rdm_acc = 0.69833516/0.5000000 | senti_loss/senti_acc = 0.72327032/0.4900000 | subj_loss/subj_acc = 0.83333540/0.5000000 \n",
+      "    30  20000|MTL_Loss:0.65468252, rdm_loss/rdm_acc = 0.63589549/1.0000000 | senti_loss/senti_acc = 0.67899604/0.5000000 | subj_loss/subj_acc = 0.78066511/0.6000000 \n",
+      "    31  20000|MTL_Loss:0.71281128, rdm_loss/rdm_acc = 0.71635437/0.5000000 | senti_loss/senti_acc = 0.68843691/0.6000000 | subj_loss/subj_acc = 0.70884066/0.6000000 \n",
+      "    32  20000|MTL_Loss:0.74456620, rdm_loss/rdm_acc = 0.73687750/0.5000000 | senti_loss/senti_acc = 0.57997524/0.8000000 | subj_loss/subj_acc = 0.97066658/0.4000000 \n",
+      "    33  20000|MTL_Loss:0.73118021, rdm_loss/rdm_acc = 0.72318298/0.5000000 | senti_loss/senti_acc = 0.80449235/0.4000000 | subj_loss/subj_acc = 0.72184591/0.6000000 \n"
      ]
     }
    ],
