--- a/BERTRDM.ipynb
+++ b/BERTRDM.ipynb
@@ -47,7 +47,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "##### RDM 模型"
    ]
@@ -55,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class pooling_layer(nn.Module):\n",
@@ -112,7 +116,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "##### CM 模型"
    ]
@@ -120,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,12 +232,36 @@
     "        return (weight *diff).mean()\n",
     "    else:\n",
     "        print(\"totally unbalanced data\")\n",
-    "        return diff.mean()\n"
+    "        return diff.mean()\n",
+    "\n",
+    "def get_new_len(rdm_model, cm_model, bert, tokenizer, FLAGS, cuda):\n",
+    "    # 因为计算句子向量的方式不一致，所以在这个地方的函数也要在各种方式内部定义\n",
+    "    new_x_len = np.zeros([len(data_ID)], dtype=np.int32)\n",
+    "    for i in range(len(data_ID)):\n",
+    "        init_state = torch.zeros([1, 1, FLAGS.hidden_dim], dtype=torch.float32) if not cuda else torch.zeros([1, 1, FLAGS.hidden_dim], dtype=torch.float32).cuda()\n",
+    "        for j in range(data_len[i]):\n",
+    "            input_ids = tokenizer.encode(\n",
+    "                        data[data_ID[i]]['text'][j],\n",
+    "                        add_special_tokens=True\n",
+    "                    )\n",
+    "            input_ids = torch.tensor([input_ids]).cuda() if cuda else torch.tensor([input_ids])\n",
+    "            sentence_emb = outs[0][0][0].reshape([1, 1,-1])\n",
+    "            stopScore, isStop, rl_new_state = cm_model(rdm_model, sentence_emb, init_state)\n",
+    "            print(\"params:\", isStop[0], isStop)\n",
+    "            init_state = rl_new_state\n",
+    "            if isStop[0] == 1:\n",
+    "                new_x_len[i] = j+1\n",
+    "                break\n",
+    "        if new_x_len[i] == 0 or new_x_len[i] > data_len[i]:\n",
+    "            new_x_len[i] = data_len[i]\n",
+    "    return new_x_len"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### 训练RDM"
    ]
@@ -237,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def TrainRDMModel(rdm_model, bert, rdm_classifier, \n",
@@ -613,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -877,163 +913,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### get_new_len 函数的重写"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "``` python\n",
-    "new_x_len = np.zeros([len(data_ID)], dtype=np.int32)\n",
-    "\n",
-    "for i in range(len(data_ID)):\n",
-    "    init_state = np.zeros([1, FLAGS.hidden_dim], dtype=np.float32)\n",
-    "    e_state = sess.run(mm.df_state, feed_dict={mm.init_states: init_state})\n",
-    "    for j in range(data_len[i]):\n",
-    "        t_words = data[data_ID[i]]['text'][j]\n",
-    "        e_x = np.zeros([1, FLAGS.max_sent_len, FLAGS.embedding_dim], dtype=np.float32)\n",
-    "        for k in range(len(t_words)):\n",
-    "            m_word = t_words[k]\n",
-    "            try:\n",
-    "                e_x[0][k] = word2vec[m_word]\n",
-    "            except:\n",
-    "                miss_word = 1\n",
-    "        # if len(t_words) != 0:\n",
-    "        #     e_x[0][:len(t_words)] = c2vec.vectorize_words(t_words)\n",
-    "        batch_dic = {mm.rl_state: e_state, mm.rl_input: e_x, mm.dropout_keep_prob: 1.0}\n",
-    "        e_isStop, mNewState = sess.run([mm.isStop, mm.rl_new_state], batch_dic)\n",
-    "        e_state = mNewState\n",
-    "\n",
-    "        if e_isStop == 1:\n",
-    "            new_x_len[i] = j+1\n",
-    "            break\n",
-    "    if new_x_len[i] == 0 or new_x_len[i] > data_len[i]:\n",
-    "        new_x_len[i] = data_len[i]\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = get_data()\n",
-    "data_ID = get_data_ID()\n",
-    "data_len = get_data_len()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bbc\\'s frank gardner on #sydneysiege: \"this is not a sophisticated siege...the gunman has got the wrong [islamic] flag\" #r4today'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[data_ID[0]]['text'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic = list(tokenizer.vocab.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ipt_ids = tokenizer.encode(\n",
-    "            data[data_ID[0]]['text'][0],\n",
-    "            add_special_tokens=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ipt_ids = torch.tensor([ipt_ids]).cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outs = bert(ipt_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([1, 40, 768]), torch.Size([1, 768]))"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outs[0].shape, outs[1].shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_new_len(rdm_model, cm_model, bert, tokenizer, FLAGS, cuda):\n",
-    "    new_x_len = np.zeros([len(data_ID)], dtype=np.int32)\n",
-    "    for i in range(len(data_ID)):\n",
-    "        init_state = torch.zeros([1, 1, FLAGS.hidden_dim], dtype=np.float32) if not cuda else torch.zeros([1, 1, FLAGS.hidden_dim], dtype=np.float32).cuda()\n",
-    "        for j in range(data_len[i]):\n",
-    "            input_ids = tokenizer.encode(\n",
-    "                        data[data_ID[i]]['text'][j],\n",
-    "                        add_special_tokens=True\n",
-    "                    )\n",
-    "            input_ids = torch.tensor([input_ids]).cuda() if cuda else torch.tensor([input_ids])\n",
-    "            \n",
-    "            e_isStop, mNewState = sess.run([mm.isStop, mm.rl_new_state], batch_dic)\n",
-    "            e_state = mNewState\n",
-    "\n",
-    "            if e_isStop == 1:\n",
-    "                new_x_len[i] = j+1\n",
-    "                break\n",
-    "        if new_x_len[i] == 0 or new_x_len[i] > data_len[i]:\n",
-    "            new_x_len[i] = data_len[i]\n",
-    "        break\n",
-    "    return new_x_len"
-   ]
+   "source": []
   }
  ],
  "metadata": {
