将get_new_len的文件迁移到了BertLoader的py文件中

--- a/MTL_RDM.ipynb
+++ b/MTL_RDM.ipynb
@@ -611,6 +611,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "os.path.exists(\"./RDMBertTrain/cached_ssq.pkl\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
